--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,9 +1,9 @@
 {
   "pages": [
-    "pages/car/car",
-    "pages/index/index",
     "pages/me/me",
-    "pages/info/info"
+    "pages/info/info",
+    "pages/car/car",
+    "pages/index/index"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
