--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -1,12 +1,12 @@
 {
   "pages": [
-    "pages/phone/phone",
+    "pages/index/index",
+    "pages/history/list/list",
     "pages/me/me",
     "pages/info/info",
     "pages/car/car",
-    "pages/index/index",
     "pages/history/detail/detail",
-    "pages/history/list/list"
+    "pages/phone/phone"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
