--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -6,7 +6,8 @@
     "pages/car/car",
     "pages/me/me",
     "pages/history/detail/detail",
-    "pages/phone/phone"
+    "pages/phone/phone",
+    "pages/error/error"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
